<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Pantalla2">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@color/orange"
        android:text="@string/seleccione_una_tematica"
        android:textSize="20sp"
    />
    <androidx.cardview.widget.CardView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:id="@+id/casaEncantadaLayout"
    >
        <ImageView
            android:layout_width="115dp"
            android:layout_height="87dp"
            android:src="@drawable/casa2"
            android:contentDescription="@string/desc_casa_encantada"
        />

        <TextView
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:gravity="center"
            android:text="@string/casa_encantada"
            android:textColor="@color/orange"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:id="@+id/bosqueMalditoLayout"

    >
        <ImageView
            android:layout_width="115dp"
            android:layout_height="87dp"
            android:src="@drawable/bosque"
            android:contentDescription="@string/desc_bosque_malvado"
        />
        <TextView
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:gravity="center"
            android:text="@string/bosque_malvado"
            android:textColor="@color/orange"
            android:textSize="20sp"
            />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:id="@+id/mansionMisteriosaLayout"
        >
        <ImageView
            android:layout_width="115dp"
            android:layout_height="87dp"
            android:src="@drawable/casa"
            android:contentDescription="@string/desc_mansion_misteriosa"
            />

        <TextView
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:gravity="center"
            android:text="@string/mansion_misteriosa"
            android:textColor="@color/orange"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>

</LinearLayout>