<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BosqueMaldito"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    >

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/casa_encantada"
        android:textColor="@color/orange"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="332dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bosque"
        android:contentDescription="@string/desc_bosque_malvado" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mostrarBosque"
        android:textSize="20sp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volver"
        android:id="@+id/botonVolverBosque" />

</LinearLayout>